--- a/region/templates/region/redesign/mining.html
+++ b/region/templates/region/redesign/mining.html
@@ -4,19 +4,15 @@
 {% load static %}
 {% load tz %}
 {% block content %}
-<script>
-    const var_mining_default = 'Добыча ресурсов';
-    const var_mining_process = 'Копаем...';
-</script>
 
 <section class="earn" id="mining_main">
-    <h1 class="earn__title ct__page-title">Добыча</h1>
+    <h1 class="earn__title ct__page-title">{% trans 'Добыча' context "mining" %}</h1>
     <p class="earn__info">
-        Потрать энергию и получи <br>
-        до <span {% if gold_week %}class="info__gold"{% endif %}>${{ daily_limit }}</span> за день!
+        {% trans 'Потрать энергию и получи' context "daily_header" %} <br>
+        {% trans 'до' context "daily_header" %} <span {% if gold_week %}class="info__gold"{% endif %}>${{ daily_limit }}</span> {% trans 'за день!' context "daily_header" %}
     </p>
     <div class="earn__energy-wrapper ct__widebar">
-        <span>энергии потрачено:</span>
+        <span>{% trans 'энергии потрачено' context "daily_header" %}:</span>
         <div class="ct__widebar-bar">
             <span>{{ player.energy_consumption }} / {{ daily_energy_limit }}</span>
             <div style="width: {{ daily_procent }}%;" class="ct__widebar-fill"></div>
@@ -26,10 +22,10 @@
         {% csrf_token %}
         <button {% if player.destination %}disabled{% endif %} class="earn__long-btn ct__long-btn btn">
             {% if player.destination %}
-            <span>в полете</span>
+            <span>{% trans 'в полете' context "daily_header" %}</span>
             {% else %}
-            <span class="process" style="display: none">получаем...</span>
-            <span>получить: ${{ daily_current_sum }}</span>
+            <span class="process" style="display: none">{% trans 'получаем' context "daily_header" %}...</span>
+            <span>{% trans 'получить' context "daily_header" %}: ${{ daily_current_sum }}</span>
             {% endif %}
             <svg width="176" height="31" viewBox="0 0 176 31" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_36_212" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="-1" width="176" height="32">
@@ -47,22 +43,22 @@
         </button>
     </form>
     <p class="earn__after-btn">
-        уже получено:
+        {% trans 'уже получено' context "daily_header" %}:
         ${{ player.paid_sum }}
     </p>
     <div class="earn__card ct__card">
-        <h3>Золото</h3>
-        <span>Запасы: {{ player.region.gold_has }} / {{ player.region.gold_cap }}</span>
+        <h3>{% trans 'Золото' context "mining" %}</h3>
+        <span>{% trans 'Запасы' context "mining" %}: {{ player.region.gold_has }} / {{ player.region.gold_cap }}</span>
         <p></p>
         <form class="mining_form" role="form">
             {% csrf_token %}
             <input type="hidden" name="resource" value="gold">
             <input type="number" min="0" max="100" value="{{ player.energy|floor_to_tens }}" step="10" name="energy">
             {% if player.destination %}
-            <button disabled>в полете</button>
+            <button disabled>{% trans 'в полете' context "daily_header" %}</button>
             {% else %}
                 {% if premium %}
-                <button class="start_auto" onclick="start_auto(event, 'gold')" style="{% if auto_mining.resource == 'gold' %}display:none{% endif %}">авто</button>
+                <button class="start_auto" onclick="start_auto(event, 'gold')" style="{% if auto_mining.resource == 'gold' %}display:none{% endif %}">{% trans 'авто' context "mining" %}</button>
                 <button class="cancel_auto" onclick="cancel_auto(event)" style="{% if not auto_mining or auto_mining.resource != 'gold' %}display:none {% endif %}">
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="7" cy="7" r="6.5" stroke="var(--c60)"></circle>
@@ -71,24 +67,24 @@
                     <span>{{ auto_mining.task.start_time|timezone:player.time_zone|date:"H:i" }}</span>
                 </button>
                 {% endif %}
-            <button class="btn-mining">добыча</button>
+            <button class="btn-mining">{% trans 'добыча' context "mining" %}</button>
             {% endif %}
         </form>
         <svg width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"/></svg>
     </div>
     <div class="earn__card ct__card">
-        <h3>Нефть</h3>
-        <span>Запасы: {{ player.region.oil_has }} / {{ player.region.oil_cap }}</span>
-        <p>Марка нефти: {{ player.region.get_oil_type_display }}</p>
+        <h3>{% trans 'Нефть' context "mining" %}</h3>
+        <span>{% trans 'Запасы' context "mining" %}: {{ player.region.oil_has }} / {{ player.region.oil_cap }}</span>
+        <p>{% trans 'Марка нефти' context "mining" %}: {{ player.region.get_oil_type_display }}</p>
 			<form class="mining_form" role="form">
                 {% csrf_token %}
                 <input type="hidden" name="resource" value="oil">
 				<input type="number" min="0" max="100" value="{{ player.energy|floor_to_tens }}" step="10" name="energy">
                 {% if player.destination %}
-                <button type="button" class="btn btn-danger">в полете</button>
+                <button type="button" class="btn btn-danger">{% trans 'в полете' context "daily_header" %}</button>
                 {% else %}
                     {% if premium %}
-                <button class="start_auto" onclick="start_auto(event, 'oil')" style="{% if auto_mining.resource == 'oil' %}display:none{% endif %}">авто</button>
+                <button class="start_auto" onclick="start_auto(event, 'oil')" style="{% if auto_mining.resource == 'oil' %}display:none{% endif %}">{% trans 'авто' context "mining" %}</button>
                 <button class="cancel_auto" onclick="cancel_auto(event)" style="{% if not auto_mining or auto_mining.resource != 'oil' %}display:none {% endif %}">
                     <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<circle cx="7" cy="7" r="6.5" stroke="var(--c60)"></circle>
@@ -97,24 +93,24 @@
                     <span>{{ auto_mining.task.start_time|timezone:player.time_zone|date:"H:i" }}</span>
                 </button>
                     {% endif %}
-                <button class="btn-mining">добыча</button>
+                <button class="btn-mining">{% trans 'добыча' context "mining" %}</button>
                 {% endif %}
 			</form>
         <svg width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"/></svg>
     </div>
     <div class="earn__card ct__card">
-        <h3>Руда</h3>
-        <span>Запасы: {{ player.region.ore_has }} / {{ player.region.ore_cap }}</span>
-        <p>Качество руды: {{ player.region.coal_proc }}% / {{ player.region.iron_proc }}% / {{ player.region.bauxite_proc }}%</p>
+        <h3>{% trans 'Руда' context "mining" %}</h3>
+        <span>{% trans 'Запасы' context "mining" %}: {{ player.region.ore_has }} / {{ player.region.ore_cap }}</span>
+        <p>{% trans 'Качество руды' context "mining" %}: {{ player.region.coal_proc }}% / {{ player.region.iron_proc }}% / {{ player.region.bauxite_proc }}%</p>
         <form class="mining_form" role="form">
             {% csrf_token %}
             <input type="hidden" name="resource" value="ore">
             <input type="number" min="0" max="100" value="{{ player.energy|floor_to_tens }}" step="10" name="energy">
             {% if player.destination %}
-            <button type="button" class="btn btn-danger">в полете</button>
+            <button type="button" class="btn btn-danger">{% trans 'в полете' context "daily_header" %}</button>
             {% else %}
                 {% if premium %}
-            <button class="start_auto" onclick="start_auto(event, 'ore')" style="{% if auto_mining.resource == 'ore' %}display:none{% endif %}">авто</button>
+            <button class="start_auto" onclick="start_auto(event, 'ore')" style="{% if auto_mining.resource == 'ore' %}display:none{% endif %}">{% trans 'авто' context "mining" %}</button>
             <button class="cancel_auto" onclick="cancel_auto(event)" style="{% if not auto_mining or auto_mining.resource != 'ore' %}display:none {% endif %}">
                 <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="7" cy="7" r="6.5" stroke="var(--c60)"></circle>
@@ -123,7 +119,7 @@
                 <span>{{ auto_mining.task.start_time|timezone:player.time_zone|date:"H:i" }}</span>
             </button>
                 {% endif %}
-            <button class="btn-mining">добыча</button>
+            <button class="btn-mining">{% trans 'добыча' context "mining" %}</button>
             {% endif %}
         </form>
         <svg width="314" height="100" viewBox="0 0 314 100" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M2.46447 11.5355L11.5355 2.46447C12.4732 1.52678 13.745 1 15.0711 1H308C310.761 1 313 3.23857 313 6V94C313 96.7614 310.761 99 308 99H6C3.23858 99 1 96.7614 1 94V15.0711C1 13.745 1.52678 12.4732 2.46447 11.5355Z" fill="var(--c30)" stroke="var(--c30)"/></svg>
