--- a/player/templates/player/redesign/profile.html
+++ b/player/templates/player/redesign/profile.html
@@ -396,22 +396,22 @@
 				{% trans 'показывать партийный фон' context "profile" %}
 			</label>
 		</div>
-<!--		&lt;!&ndash;чекбокс&ndash;&gt;-->
-<!--		<div class="m-sett__form-check ct__check-box30">-->
-<!--			<label for="full_auto">-->
-<!--				<input id="full_auto" type="checkbox" class="visually-hidden" {% if full_auto %}checked{% endif %}>-->
-<!--				<svg width="24" height="24" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--					<path d="M24.3536 19.3536L24.5 19.2071V19V1V0.5H24H6H5.79289L5.64645 0.646447L0.646447 5.64645L0.5 5.79289V6V24V24.5H1H19H19.2071L19.3536 24.3536L24.3536 19.3536Z" stroke="var(&#45;&#45;c10two)"/>-->
-<!--				</svg>-->
-<!--				<span>-->
-<!--					<svg width="24" height="24" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">-->
-<!--						<path d="M24.3536 19.3536L24.5 19.2071V19V1V0.5H24H6H5.79289L5.64645 0.646447L0.646447 5.64645L0.5 5.79289V6V24V24.5H1H19H19.2071L19.3536 24.3536L24.3536 19.3536Z" stroke="var(&#45;&#45;c10two)"/>-->
-<!--						<path d="M6.5 4.5L4.5 6.5V20.5H18.5L20.5 18.5V4.5H6.5Z" fill="var(&#45;&#45;c10two)" stroke="var(&#45;&#45;c10two)"/>-->
-<!--					</svg>-->
-<!--				</span>-->
-<!--				{% trans 'Энергетики в авто-добыче' context "profile" %}-->
-<!--			</label>-->
-<!--		</div>-->
+		<!--чекбокс-->
+		<div class="m-sett__form-check ct__check-box30">
+			<label for="full_auto">
+				<input id="full_auto" type="checkbox" class="visually-hidden" {% if full_auto %}checked{% endif %}>
+				<svg width="24" height="24" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M24.3536 19.3536L24.5 19.2071V19V1V0.5H24H6H5.79289L5.64645 0.646447L0.646447 5.64645L0.5 5.79289V6V24V24.5H1H19H19.2071L19.3536 24.3536L24.3536 19.3536Z" stroke="var(--c10two)"/>
+				</svg>
+				<span>
+					<svg width="24" height="24" viewBox="0 0 25 25" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path d="M24.3536 19.3536L24.5 19.2071V19V1V0.5H24H6H5.79289L5.64645 0.646447L0.646447 5.64645L0.5 5.79289V6V24V24.5H1H19H19.2071L19.3536 24.3536L24.3536 19.3536Z" stroke="var(--c10two)"/>
+						<path d="M6.5 4.5L4.5 6.5V20.5H18.5L20.5 18.5V4.5H6.5Z" fill="var(--c10two)" stroke="var(--c10two)"/>
+					</svg>
+				</span>
+				{% trans 'Энергетики в авто-добыче' context "profile" %}
+			</label>
+		</div>
 		<form id="color_set" role="form" method="post" class="m-sett__form">
 			{% csrf_token %}
 			<div class="m-sett__colors">
