--- a/storage/templates/storage/trading/new_offer.html
+++ b/storage/templates/storage/trading/new_offer.html
@@ -35,33 +35,33 @@
 <form id="new_offer_form" role="form">
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-            Новое торговое предложение
+            {% trans 'Новое торговое предложение' context "w_trading_new" %}
         </div>
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-            Доступно: {% if free_offers > 0 %}{{ free_offers }}{% else %}0{% endif %} / {{ total_offers }}
+            {% trans 'Доступно' context "w_trading_new" %}: {% if free_offers > 0 %}{{ free_offers }}{% else %}0{% endif %} / {{ total_offers }}
         </div>
     </div>
     <div class="row">
         <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-            (+5 за каждый Склад)
+            ({% trans '+5 за каждый Склад' context "w_trading_new" %})
         </div>
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            Действие
+            {% trans 'Действие' context "w_trading" %}
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6" align="left">
             <select name="action" id="action">
-                <option selected value='sell'>Продажа</option>
-                    <option value='buy'>Покупка</option>
+                <option selected value='sell'>{% trans 'Продажа' context "w_trading_new" %}</option>
+                    <option value='buy'>{% trans 'Покупка' context "w_trading_new" %}</option>
             </select>
         </div>
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            Склад
+            {% trans 'Склад' context "w_trading_new" %}
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6" align="left">
             <select name="storage" id="storage">
@@ -73,11 +73,11 @@
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            Група товаров
+            {% trans 'Группа товаров' context "w_trading_new" %}
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6" align="left">
             <select id="group">
-                <option id="group_default" value='default' disabled selected value>Выберите группу</option>
+                <option id="group_default" value='default' disabled selected value>{% trans 'Выберите группу' context "w_trading_new" %}</option>
                 {% for group in storage_cl|get_attr:'types' %}
                 <option value='{{ group }}'>{{ storage_cl|get_attr:'types'|dict_key:group }}</option>
                 {% endfor %}
@@ -87,11 +87,11 @@
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            Товар
+            {% trans 'Товар' context "w_trading_new" %}
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6" align="left">
             <select disabled name="good" id="good">
-                <option id="good_default" value='default' disabled selected value>Выберите товар</option>
+                <option id="good_default" value='default' disabled selected value>{% trans 'Выберите товар' context "w_trading_new" %}</option>
                 {% for group in storage_cl|get_attr:'types' %}
                     {% for good in storage_cl|get_attr:group %}
                 <option id="good_{{ good }}" value='{{ good }}' style="display: none">{{ storage_cl|get_attr:group|dict_key:good }}</option>
@@ -103,7 +103,7 @@
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            Количество
+            {% trans 'Количество' context "w_trading" %}
         </div>
         <div class="col-xs-2 col-sm-2 col-md-2" align="left">
             <input id="count" type="number" min="0" max="0" value="0" step="1" name="count" maxlength="3">
@@ -115,7 +115,7 @@
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            Цена
+            {% trans 'Цена (шт.)' context "w_trading" %}
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3" align="left">
             <input id="price" type="number" min="0" max="9223372036854775807" value="0" step="1" name="price">
@@ -123,7 +123,7 @@
     </div>
     <div class="row" id="buy_row" style="margin-top: 1%; display: none">
         <div class="col-xs-6 col-sm-6 col-md-6" align="right">
-            Будет заблокировано:
+            {% trans 'Будет заблокировано' context "w_trading_new" %}:
         </div>
         <div class="col-xs-3 col-sm-3 col-md-3" align="left">
             <b style="color: #85bb65" id="cash_to_lock">
@@ -133,7 +133,7 @@
     </div>
     <div class="row" style="margin-top: 1%;">
         <div class="col-xs-12 col-sm-12 col-md-12" align="center">
-            <button disabled id="accept" type="submit" class="save btn btn-info">Создать</button>
+            <button disabled id="accept" type="submit" class="save btn btn-info">{% trans 'Создать' context "w_trading_new" %}</button>
         </div>
     </div>
 </form>
